feat: add categories API
