# docs/swagger.json
@@ -1,24 +1,24 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API untuk manajemen produk",
-        "title": "Produk API",
+        "description": "API for product management",
+        "title": "Product API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/produk": {
+        "/api/categories": {
             "get": {
-                "description": "Mengambil semua data produk",
+                "description": "Retrieve all category data",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "produk"
+                    "categories"
                 ],
-                "summary": "Get all produk",
+                "summary": "Get all categories",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -29,22 +29,22 @@
                 }
             },
             "post": {
-                "description": "Menambahkan data produk baru",
+                "description": "Add a new category",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "produk"
+                    "categories"
                 ],
-                "summary": "Add new produk",
+                "summary": "Add new category",
                 "parameters": [
                     {
-                        "description": "Data Produk",
-                        "name": "produk",
+                        "description": "Category Data",
+                        "name": "category",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Produk"
+                            "$ref": "#/definitions/main.Category"
                         }
                     }
                 ],
@@ -64,20 +64,20 @@
                 }
             }
         },
-        "/api/produk/{id}": {
+        "/api/categories/{id}": {
             "get": {
-                "description": "Mengambil produk berdasarkan ID",
+                "description": "Retrieve category by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "produk"
+                    "categories"
                 ],
-                "summary": "Get produk by ID",
+                "summary": "Get category by ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Produk ID",
+                        "description": "Category ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -105,29 +105,29 @@
                 }
             },
             "put": {
-                "description": "Mengubah data produk berdasarkan ID",
+                "description": "Update category by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "produk"
+                    "categories"
                 ],
-                "summary": "Update produk",
+                "summary": "Update category",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Produk ID",
+                        "description": "Category ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Data Produk",
-                        "name": "produk",
+                        "description": "Category Data",
+                        "name": "category",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Produk"
+                            "$ref": "#/definitions/main.Category"
                         }
                     }
                 ],
@@ -153,18 +153,201 @@
                 }
             },
             "delete": {
-                "description": "Menghapus produk berdasarkan ID",
+                "description": "Delete category by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "produk"
+                    "categories"
                 ],
-                "summary": "Delete produk",
+                "summary": "Delete category",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Produk ID",
+                        "description": "Category ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products": {
+            "get": {
+                "description": "Retrieve all product data",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Get all products",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Add a new product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Add new product",
+                "parameters": [
+                    {
+                        "description": "Product Data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.Product"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/{id}": {
+            "get": {
+                "description": "Retrieve product by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Get product by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update product by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Update product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Product Data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.Product"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete product by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Delete product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -206,19 +389,30 @@
                 }
             }
         },
-        "main.Produk": {
+        "main.Category": {
             "type": "object",
             "properties": {
-                "harga": {
-                    "type": "integer"
-                },
                 "id": {
                     "type": "integer"
                 },
-                "nama": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.Product": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 },
-                "stok": {
+                "price": {
+                    "type": "integer"
+                },
+                "stock": {
                     "type": "integer"
                 }
             }
